# DDD_FastAPI_Kafka_WebScokets

./: .gitignore  Makefile  Readme.md  pyproject.toml  shell
app/api/: main.py
app/application/api/: main.py
app/application/api/dependencies/: containers.py
app/application/api/messages/: handlers.py  schema.py
app/domain/: __init__.py
app/domain/entities/: 1_hash_eq_dataclass.md  base.py  messages.py
app/domain/events/: base.py
app/domain/exceptions/: base.py  messages.py
app/domain/tests/: __init__.py
app/domain/tests/domain/values/: test_messages.py
app/domain/values/: 1_explain_value_generic.md  2_pydantic_vs_dataclass_drf.md  base.py  messages.py
app/infra/repositories/: messages.py
app/infra/repositories/messages/: base.py  converters.py  memory.py  mongo.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  messages.py
app/logic/events/: base.py  messages.py
app/logic/exceptions/: base.py  mediator.py  messages.py
app/logic/queries/: base.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/api/: conftest.py  test_messages.py
app/tests/logic/: test_messages.py
docker_compose/: app.yaml  storages.yaml
imgs_expl/: 1_DDD_general.md  2_DDD_Structure_in_Django_Project.md  3_DDD_Mediator_and_DI_Container.md  DDD.md  ddd_entities_usecases.md  poetry.md  subject area.md
