[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["Vyacheslav <skavik4611@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
motor = "^3.3.2"
uvicorn = {extras = ["all"], version = "^0.32.0"}
ipython = "^8.28.0"
pytest = "^8.3.3"
faker = "^30.6.0"
pytest-asyncio = "^0.24.0"
punq = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
